force-app/main/default/objects/Session_Speaker__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <description>Indicates whether the speaker has confirmed their participation in the session.</description>
    <defaultValue>false</defaultValue>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>