force-app/main/default/objects/Session_Speaker__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The speaker's role in the session (e.g. Keynote, Panelist, Moderator).</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
                <default>true</default>
                <label>Panelist</label>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Workshop Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>